Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -258,15 +258,7 @@
         "$$\n",
         "\n",
         " \n",
-        "(3.12)와 (3.13)식을 이용하여 첫번째 항을 구하면 다음과 같다. [^Marino2]\n",
-        "First term (electron propagation term:  \n",
-        "$$\n",
-        "H_{e} = \\sum_{\\bf k,k',\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k'\\sigma}\n",
-        "\\int d^3xe^{i\\bf (k'-k)\\cdot x}{1\\over N} \\sum_RV({\\bf x-R}) \\\\\n",
-        "=\\sum_{\\bf Q,k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\bf k\\sigma}c_{\\bf k+Q,\\sigma}\\tag{3.50}\n",
-        "$$\n",
-        "\n",
-        "Since $E(\\mathbf k) = E ({\\bf k + Q})$, according to the Bloch theorem, this means the scattered electron will have the same energy it has before the scattering. On the other hand, physical momenta corresponding to wave-vectors satisfying the relation (3.50) are precisely the same. Hence we can now completely understand why an electron in a Bravais lattice propagates without being scattered: its momentum and energy simply are not changed as it propagates.\n",
+        "첫번째 항은 electron과 ion의 평형상태의 interaction이다. 이 interaction은 Hamiltonian의 free electron항에 이미 포함되어 있다. [^solyom] [^Marino2]  \n",
         "\n",
         "2nd term (electron-phonon interaction):  \n",
         "$$\n",
@@ -278,15 +270,39 @@
         "\n",
         "![](https://www.researchgate.net/profile/Juan-Vasquez-Jaramillo-2/publication/331302522/figure/fig1/AS:729473951481860@1550931551693/Feynman-Diagram-with-Two-Electron-Lines-Emerging-and-entering-a-Vertex-Point-and-One.png)  \n",
         "\n",
+        "[^solyom]: solyom 23.1\n",
+        "    The first term gives the equilibrium value of the electron–ion interaction. This lattice-periodic potential has to be included in (17.1.1) to calculate the energy spectrum of the electrons in the static lattice.\n",
         "\n",
         "[^Lancaster]: Lancaster (Error fixed in the definition of $a^\\dagger_k$)  \n",
         "\n",
-        "[^Marino]: Marino\n",
+        "[^Marino]: Marino - Quantum Field Theory Approach to Condensed Matter Physics \n",
         "\n",
         "[^Marino2]: Marino  \n",
         "    > Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
+        "\n",
         "    Confusing!  \n",
-        "    Just use (3.12), (3.13)  "
+        "    Just use (3.12), (3.13)  \n",
+        "    First term (electron propagation term:  $$\n",
+        "    H_{e} = \\sum_{\\bf k,k',\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k'\\sigma}\n",
+        "    \\int d^3xe^{i\\bf (k'-k)\\cdot x}{1\\over N} \\sum_RV({\\bf x-R}) \\\\\n",
+        "    $$\n",
+        "\n",
+        "    여기서 lattice 구조에 의해 두 momentum의 차이는 reciprocal vector $\\mathbf Q$와 같다.  \n",
+        "\n",
+        "    $$\n",
+        "    \\mathbf k' - \\mathbf k = \\mathbf Q \\tag{3.50}\n",
+        "    $$\n",
+        "\n",
+        "    따라서,\n",
+        "    $$\n",
+        "    H_{e}=\\sum_{\\bf Q,k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\bf k\\sigma}c_{\\bf k+Q,\\sigma}\\tag{3.51}\n",
+        "    $$\n",
+        "\n",
+        "    격자 구조에 의해서 $E(\\mathbf k) = E ({\\bf k + Q})$이므로 (3.50)을 만족시키는 두 momentum은 물리적으로 동일하다.  \n",
+        "\n",
+        "\n",
+        "[^Marino3]:  Since $E(\\mathbf k) = E ({\\bf k + Q})$, according to the Bloch theorem, this means the scattered electron will have the same energy it has before the scattering. On the other hand, physical momenta corresponding to wave-vectors satisfying the relation (3.50) are precisely the same. Hence we can now completely understand why an electron in a Bravais lattice propagates without being scattered: its momentum and energy simply are not changed as it propagates.  \n",
+        "    Marino"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
