Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -260,13 +260,30 @@
         " \n",
         "첫번째 항은 electron과 ion의 평형상태의 interaction이다. 이 interaction은 Hamiltonian의 free electron항에 이미 포함되어 있다. [^solyom] [^Marino2]  \n",
         "\n",
-        "2nd term (electron-phonon interaction):  \n",
+        "두번째 항은 ion의 displacement에 의한 것으로 electron-phonon interaction에 해당한다.  \n",
+        "\n",
         "$$\n",
         "\\begin{align*}\n",
-        "H_{el-ph} &=\\sum_{\\bf{k,q},s,\\sigma}W_{\\mathbf q,s}c^\\dagger_{\\bf k+q,\\sigma}c_{\\bf k\\sigma}[a_{\\mathbf qs}+a^\\dagger_{-\\mathbf q,s}]\\\\\n",
+        "H_{el-ph} &= {1\\over\\sqrt{N}}\\sum_{\\bf k,k',\\sigma} c^\\dagger_{\\bf k\\sigma}c_{\\bf k'\\sigma}\n",
+        "{1\\over N}\\sum_{\\bf R}e^{i({\\bf k'-k+q})\\cdot\\mathbf R_i}\n",
+        "\\sqrt{\\hbar\\over 2m\\omega_{\\mathbf ks}}\n",
+        "[a_{\\mathbf qs}+a^\\dagger_{-\\mathbf q,s}] \\\\\n",
+        "&=\\sum_{\\bf{k,q},s,\\sigma}g_{\\mathbf qs}c^\\dagger_{\\bf k+q,\\sigma}c_{\\bf k\\sigma}[a_{\\mathbf qs}+a^\\dagger_{-\\mathbf q,s}]\n",
+        "\\\\\n",
         "&\\equiv H_I\n",
         "\\end{align*}\n",
         "$$\n",
+        "\n",
+        "여기서 $g_{\\mathbf ks}$는 interaction의 강도를 나타내는 것으로 다음과 같이 정의된다.  \n",
+        "$$\n",
+        "g_{\\mathbf ks}\\equiv \\sqrt{\\hbar\\over 2mN\\omega_{\\mathbf qs}}\n",
+        "\\int d^3x\\ e^{-i{\\bf q\\cdot x}}\\ \\mathbf e_s\\cdot\\nabla_{\\bf x}V(\\mathbf x)\n",
+        "$$\n",
+        "\n",
+        "Interaction term의 물리적 의미는 다음과 같다.\n",
+        "왼쪽 항은 $g_{\\mathbf qs}c^\\dagger_{\\bf k+q,\\sigma}c_{\\bf k\\sigma}a_{\\mathbf qs}$로서 incoming electorn $c_{\\bf k\\sigma}$이 phonon을 흡수 $a_{\\mathbf qs}$하여 outgoing electron $c^\\dagger_{\\bf k+q,\\sigma}$이 방출되는 것이다.  오른쪽 항은 $\\bf q \\to -q$로 변경하여보면, $g_{-\\mathbf q,s}c^\\dagger_{\\bf k-q,\\sigma}c_{\\bf k\\sigma}a^\\dagger_{\\mathbf qs}$로서 incoming electorn $c_{\\bf k\\sigma}$이 phonon을 생성 $a^\\dagger_{\\mathbf qs}$하고 outgoing electron $c^\\dagger_{\\bf k-q,\\sigma}$로 방출되는 것이다.  \n",
+        "이것을 Feynman diagram으로 그려보면 다음과 같다.  \n",
+        "\n",
         "\n",
         "![](https://www.researchgate.net/profile/Juan-Vasquez-Jaramillo-2/publication/331302522/figure/fig1/AS:729473951481860@1550931551693/Feynman-Diagram-with-Two-Electron-Lines-Emerging-and-entering-a-Vertex-Point-and-One.png)  \n",
         "\n",
@@ -277,32 +294,23 @@
         "\n",
         "[^Marino]: Marino - Quantum Field Theory Approach to Condensed Matter Physics \n",
         "\n",
-        "[^Marino2]: Marino  \n",
+        "[^Marino2]: Marino - Volume3   \n",
         "    > Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
-        "\n",
         "    Confusing!  \n",
         "    Just use (3.12), (3.13)  \n",
         "    First term (electron propagation term:  $$\n",
         "    H_{e} = \\sum_{\\bf k,k',\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k'\\sigma}\n",
         "    \\int d^3xe^{i\\bf (k'-k)\\cdot x}{1\\over N} \\sum_RV({\\bf x-R}) \\\\\n",
         "    $$\n",
-        "\n",
         "    여기서 lattice 구조에 의해 두 momentum의 차이는 reciprocal vector $\\mathbf Q$와 같다.  \n",
-        "\n",
         "    $$\n",
         "    \\mathbf k' - \\mathbf k = \\mathbf Q \\tag{3.50}\n",
         "    $$\n",
-        "\n",
         "    따라서,\n",
         "    $$\n",
         "    H_{e}=\\sum_{\\bf Q,k,\\sigma}V(\\mathbf Q)c^\\dagger_{\\bf k\\sigma}c_{\\bf k+Q,\\sigma}\\tag{3.51}\n",
         "    $$\n",
-        "\n",
-        "    격자 구조에 의해서 $E(\\mathbf k) = E ({\\bf k + Q})$이므로 (3.50)을 만족시키는 두 momentum은 물리적으로 동일하다.  \n",
-        "\n",
-        "\n",
-        "[^Marino3]:  Since $E(\\mathbf k) = E ({\\bf k + Q})$, according to the Bloch theorem, this means the scattered electron will have the same energy it has before the scattering. On the other hand, physical momenta corresponding to wave-vectors satisfying the relation (3.50) are precisely the same. Hence we can now completely understand why an electron in a Bravais lattice propagates without being scattered: its momentum and energy simply are not changed as it propagates.  \n",
-        "    Marino"
+        "    Since $E(\\mathbf k) = E ({\\bf k + Q})$, according to the Bloch theorem, this means the scattered electron will have the same energy it has before the scattering. On the other hand, physical momenta corresponding to wave-vectors satisfying the relation (3.50) are precisely the same. Hence we can now completely understand why an electron in a Bravais lattice propagates without being scattered: its momentum and energy simply are not changed as it propagates.  "
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
