Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -293,8 +293,9 @@
         "\n",
         "[^Marino]: Marino - Quantum Field Theory Approach to Condensed Matter Physics \n",
         "\n",
-        "[^Marino2]: Marino - Volume3   \n",
-        "    > Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
+        "[^Marino2]:\n",
+        "    Marino - Volume3   \n",
+        "        > Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
         "    Confusing!  \n",
         "    Just use (3.12), (3.13)  \n",
         "    First term (electron propagation term:  $$\n",
