Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "superconductor-study.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -508,13 +509,68 @@
       "source": [
         "## Density of states in Debye model \n",
         "\n",
-        "Debye는 격자 구조의 진동을 모델링 하였다. \n",
+        "한변의 길이가 $L$인 cube에서 periodic boundary condtition을 가정한다.  \n",
+        "여기에서 발생하는 wave는 다음과 같은 값을 가질 수 있다.\n",
+        "$$\n",
+        "k_x,k_y,k_z =n{2\\pi\\over L}\n",
+        "$$\n",
+        "\n",
+        "$\\bf k$ 공간에서 이들의 한 격자 cube의 volume은 다음과 같다. \n",
+        "$$\n",
+        "V_{elementary} = {(2\\pi)^3\\over L^3}\n",
+        "$$\n",
+        "\n",
+        "반경이 $k$인 momentum 구의 부피는 다음과 같다.  \n",
+        "$$\n",
+        "V_{sphere} = {4\\pi\\over3}k^3\n",
+        "$$\n",
+        "\n",
+        "따라서 이 구에 존재할 수 있는 momemtum의 총 수는 다음과 같다.\n",
+        "$$\n",
+        "N = {V_{elementary}\\over V_{sphere}}=\\int_0^k g(k')dk'\n",
+        "$$\n",
+        "\n",
+        "미분하여 k에 대한 density of state를 구하면 다음과 같다.\n",
+        "\n",
+        "$$\n",
+        "g(k)dk = {V\\over2\\pi}k^2\\ dk\n",
+        "$$\n",
+        "\n",
+        "Debye는 flat dispersion $\\omega = vk$를 가정하였다. $dk/d\\omega=1/v$이므로,\n",
+        "$g(\\omega)\\ d\\omega = g(k)\\ dk$로부터, $\\omega$에 대한 density of state를 구할 수 있다.\n",
+        "\n",
+        "$$\n",
+        "g(\\omega) = {V\\over 2\\pi v^3}\\omega^2\n",
+        "$$\n",
+        "\n",
+        "진동의 모드가 총 3가지 (한개의 longitudial, 두개의 transverse)이므로 density of state는 위 계산의 3배가 된다. \n",
+        "\n",
+        "Lattice crystal 내에서 wave frequency에는 상한선이 존재한다. 이 상한선까지 density of state를 모두 적분하게되면 최대 자유도인 3N(crystal의 lattice point 수$\\times$ 3개의 모드)가 된다.\n",
+        "\n",
+        "$$\n",
+        "3N = 3\\int_0^{\\omega_\\text{max}}g(w)dw ={V\\over2\\pi^2v^3}\\omega_\\text{max}^3 \n",
+        "$$\n",
+        "\n",
+        "이 최대 진동수를 Debye frequency라고 부른다. [^ref1] \n",
+        "\n",
+        "$$\n",
+        "\\omega_D \\equiv \\omega_\\text{max} = v\\left(6\\pi^2{N\\over V}\\right)^{1\\over3}\n",
+        "$$\n",
+        "\n",
+        "따라서 crystal내의 wave의 분포는 다음의 그래프와 같은 분포를 가진다.\n",
+        "\n",
         "\n",
         "<div>\n",
         "<img src=\"https://www.researchgate.net/profile/Masatsugu-Suzuki-3/publication/278020916/figure/fig6/AS:669698907725826@1536680070438/Fig-Density-of-states-in-the-Debye-model.png\"  width=\"400\"/>\n",
         "</div>\n",
         "\n",
-        "Typical Debye frequency(energy) of metal: $\\hbar\\omega_D =$ 100K ~ 500K (ref: Ivanov)  "
+        "Typical Debye frequency(energy) of metal: $\\hbar\\omega_D =$ 100K ~ 500K [^Ivanov] \n",
+        "\n",
+        "[^ref1]:   \n",
+        "    http://personal.ph.surrey.ac.uk/~phs1ss/2SS/2SS%20lecture%208.pdf\n",
+        "    https://www.ucl.ac.uk/~ucapahh/teaching/3C25/Lecture10s.pdf  \n",
+        "\n",
+        "[^Ivanov]: Condensed matter theory-2015-full-lecture note-Ivanov\n"
       ],
       "metadata": {
         "id": "IyIWo0VxXMm-"
@@ -1117,7 +1173,7 @@
         "![](https://i.imgur.com/FVMKgmq.png)  \n",
         "**Fig. 3** (a) The Fermi sphere at equilibrium, (b) Displacement of the Fermi sphere due to an electric field. [^tsymbal]\n",
         "\n",
-        "Suppercurrent에 기여하는 것은 Fermi surface근처의 BCS ground state뿐이아니라 Fermi sea 내부의 전자(free electron)들도 기여한다. 모두가 동일한 속도로 이동한다. 전자는 excite state와의 energy gap 때문에 scattering되지 않고 후자는 이미 모든 상태가 차 있기 때문에 scattering되지 않는다. [^Kadin]\n",
+        "Suppercurrent에 기여하는 것은 Fermi surface근처의 BCS ground state뿐이아니라 Fermi sea 내부의 전자(free electron)들도 기여한다. 모두가 동일한 속도로 이동한다. 전자는 excite state와의 energy gap 때문에 scattering되지 않고 후자는 이미 모든 상태가 차 있기 때문에 scattering되지 않는다. [^Kadin] [^Blundell]  \n",
         "\n",
         "[^tsymbal]: The situation changes when a field is applied. If the field is in the positive x-direction, each electron\n",
         "acquires a drift velocity, as given by Eq.(3). Thus the whole Fermi sphere is displaced to the left, as shown in Fig.3(b). Although the displacement is very small, and although the great majority of the electrons still cancel each other pairwise, some electrons - in the shaded crescent in the figure - remain uncompensated. It is these electrons which produce the observed current.  \n",
@@ -1141,7 +1197,12 @@
         "\n",
         "[^Kadin]: \n",
         "    The BCS ground state at T=0 consists of two classes of electrons: those deep inside the Fermi sea, which are essentially the same as those in the normal state, and those near the Fermi surface, which form the superposition of Cooper pairs. These latter electrons, the “frozen crust” at the top of the Fermi sea [3], cannot scatter because they are in a coherent state. The former electrons inside the sea cannot scatter because they are far from the surface. At T=0, all electrons of both classes contribute to the lossless supercurrent, ...  \n",
-        "    https://arxiv.org/pdf/cond-mat/0510279.pdf"
+        "    https://arxiv.org/pdf/cond-mat/0510279.pdf\n",
+        "\n",
+        "\n",
+        "\n",
+        "[^Blundell]: Superconductivity A Very Short Introduction by Stephen J. Blundell  \n",
+        "    How does the BCS theory explain superconductivity? The first thing to realize is that in superconductors, it is not that the electrons suddenly become immune from scattering off impurities and off each other (the effect that gives electrical resistance in a normal metal), it is simply that scattering does not affect conduction. The two electrons in a superconducting pair have equal and opposite momentum with respect to each other, although the pair as a whole can glide through a sample when a current flows. All the pairs are locked together and glide at the same speed. If a pair scatters with a phonon, then the two electrons may change their individual momenta but the gliding of the pair along the current direction continues completely unaffected. In effect, a pair state scatters into another pair state. This occurs because there is a very great energy saving for keeping all pairs moving with identical speeds. It costs too much energy to knock a pair out of line with all the others. The electrical current represented by this uniformly gliding assembly of electrons, once started, can continue forever."
       ],
       "metadata": {
         "id": "lOciflHpTg0U"
@@ -1356,22 +1417,6 @@
       ],
       "metadata": {
         "id": "EMIfHa8I7_hM"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Manybody\n",
-        "\n",
-        "How does the BCS theory explain superconductivity? The first thing to realize is that in superconductors, it is not that the electrons suddenly become immune from scattering off impurities and off each other (the effect that gives electrical resistance in\n",
-        "63\n",
-        "Pairing upa normal metal), it is simply that scattering does not affect conduction. The two electrons in a superconducting pair have equal and opposite momentum with respect to each other, although the pair as a whole can glide through a sample when a current flows. All the pairs are locked together and glide at the same speed. If a pair scatters with a phonon, then the two electrons may change their individual momenta but the gliding of the pair along the current direction continues completely unaffected. In effect, a pair state scatters into another pair state. This occurs because there is a very great energy saving for keeping all pairs moving with identical speeds. It costs too much energy to knock a pair out of line with all the others. The electrical current represented by this uniformly gliding assembly of electrons,\n",
-        "once started, can continue forever. [^Blundell]  \n",
-        "\n",
-        "[^Blundell]: Superconductivity A Very Short Introduction by Stephen J. Blundell  "
-      ],
-      "metadata": {
-        "id": "La719DFH8Lg4"
       }
     },
     {
