Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -567,7 +567,7 @@
         "Typical Debye frequency(energy) of metal: $\\hbar\\omega_D =$ 100K ~ 500K [^Ivanov] \n",
         "\n",
         "[^ref1]:   \n",
-        "    http://personal.ph.surrey.ac.uk/~phs1ss/2SS/2SS%20lecture%208.pdf\n",
+        "    http://personal.ph.surrey.ac.uk/~phs1ss/2SS/2SS%20lecture%208.pdf  \n",
         "    https://www.ucl.ac.uk/~ucapahh/teaching/3C25/Lecture10s.pdf  \n",
         "\n",
         "[^Ivanov]: Condensed matter theory-2015-full-lecture note-Ivanov\n"
@@ -933,8 +933,10 @@
         "\n",
         "$u, v$를 독립 변수로 두고 다음의 두가지 constraint를 고려하여 E를 최소화하는 조건을 찾는다.  \n",
         "$$\n",
+        "\\begin{gather}\n",
         "|u_\\mathbf k|^2 + |v_\\mathbf k|^2 = 1\\\\\n",
         "N = \\sum_\\mathbf k \\left( |v_\\mathbf k|^2 -|u_\\mathbf k|^2 -1\\right)\n",
+        "\\end{gather}\n",
         "$$\n",
         "Lagrangian multiplier로서 $E_\\mathbf k$와 $-\\mu$를 도입하면,\n",
         "$$\n",
@@ -979,9 +981,11 @@
         "합계를 적분으로 바꾸고 $\\sum_{\\bf k} \\to g(\\epsilon_F)\\int d\\epsilon$, $\\epsilon \\equiv \\epsilon_{\\bf k}-\\mu$로 정의하면,[^solyom1] [^solyom2]\n",
         "\n",
         "$$\n",
+        "\\begin{gather}\n",
         "\\Delta = \\underbrace{g^2g(\\epsilon_F)}_{\\equiv\\Lambda}\n",
         "\\int_{-\\omega_D}^{\\omega_D}d\\epsilon {\\Delta\\over 2\\sqrt{\\epsilon^2+\\Delta^2}}\\\\\n",
         "{1\\over\\Lambda} = \\sinh^{-1}\\left(\\omega_D\\over\\Delta\\right)\n",
+        "\\begin{gather}\n",
         "$$\n",
         "\n",
         "$\\Delta \\ll \\omega_D$ 이므로, gap은 다음과 같다.\n",
