--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -933,10 +933,10 @@
         "\n",
         "$u, v$를 독립 변수로 두고 다음의 두가지 constraint를 고려하여 E를 최소화하는 조건을 찾는다.  \n",
         "$$\n",
-        "\\begin{gather}\n",
+        "\\begin{gather*}\n",
         "|u_\\mathbf k|^2 + |v_\\mathbf k|^2 = 1\\\\\n",
         "N = \\sum_\\mathbf k \\left( |v_\\mathbf k|^2 -|u_\\mathbf k|^2 -1\\right)\n",
-        "\\end{gather}\n",
+        "\\end{gather*}\n",
         "$$\n",
         "Lagrangian multiplier로서 $E_\\mathbf k$와 $-\\mu$를 도입하면,\n",
         "$$\n",
@@ -981,11 +981,11 @@
         "합계를 적분으로 바꾸고 $\\sum_{\\bf k} \\to g(\\epsilon_F)\\int d\\epsilon$, $\\epsilon \\equiv \\epsilon_{\\bf k}-\\mu$로 정의하면,[^solyom1] [^solyom2]\n",
         "\n",
         "$$\n",
-        "\\begin{gather}\n",
+        "\\begin{gather*}\n",
         "\\Delta = \\underbrace{g^2g(\\epsilon_F)}_{\\equiv\\Lambda}\n",
         "\\int_{-\\omega_D}^{\\omega_D}d\\epsilon {\\Delta\\over 2\\sqrt{\\epsilon^2+\\Delta^2}}\\\\\n",
         "{1\\over\\Lambda} = \\sinh^{-1}\\left(\\omega_D\\over\\Delta\\right)\n",
-        "\\begin{gather}\n",
+        "\\end{gather*}\n",
         "$$\n",
         "\n",
         "$\\Delta \\ll \\omega_D$ 이므로, gap은 다음과 같다.\n",
