Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1435,6 +1435,80 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Bounded states of weak potential\n",
+        "\n",
+        "Scrodinger 방정식은 다음과 같다. (reduced mass  $\\mu={m\\over2}$)\n",
+        "\n",
+        "$$\n",
+        "\\left({1\\over m}{\\partial^2\\over\\partial x^2}+E\\right)\\psi(x) = V(x)\\psi(x)\n",
+        "$$\n",
+        "Fourier transform을 하면,\n",
+        "$$\n",
+        "\\begin{gather*}\n",
+        "\\left({1\\over m}{\\partial^2\\over\\partial x^2}+E\\right)\\int{dp\\over2\\pi}e^{-ipx}\\psi(p) = \\int{dp\\over2\\pi}e^{-ipx}\\int dx'e^{ipx}V(x')\\psi(x')\\\\\n",
+        "\\left(-{p^2\\over m}+E\\right)\\psi(p) = \\int {dp'\\over2\\pi}V(p-p')\\psi(p')\\\\\n",
+        "\\psi(p) = -mV_0{1\\over p^2+k^2}\\int {dp'\\over2\\pi}\\psi(p')\\\\\n",
+        "-{k^2\\over m}\\equiv E\n",
+        "\\end{gather*}\n",
+        "$$\n",
+        "양변을 p에 대해 적분하면 (self consistancy),\n",
+        "$$\n",
+        "-{1\\over V_0} = \\int {dp\\over2\\pi}{m\\over p^2+k^2}\\approx \\int_{p<{1\\over R}} {dp\\over2\\pi}{m\\over p^2+k^2}\n",
+        "$$\n",
+        "일반적으로 d차원에서는,\n",
+        "$$\n",
+        "\\begin{gather*}\n",
+        "-{1\\over V_0} = \\int_{p<{1\\over R}} {dp^d\\over(2\\pi)^d}{m\\over p^2+k^2}\n",
+        "= \\int_{\\epsilon < E_R}d\\epsilon{\\rho_d(\\epsilon)/\\Omega\\over 2\\epsilon+|E|}\\\\\n",
+        "E_R\\equiv {\\hbar^2\\over mR^2}\n",
+        "\\end{gather*}\n",
+        "$$\n",
+        "\n",
+        "여기서 weak potential $V_0\\sim VR^d$이고, $V_0$가 volume의 차원을 가지므로 $\\Omega$는 system의 volume이다. \n",
+        "\n",
+        "2차원에 대해 계산하면 다음과 같다.  \n",
+        "$$\n",
+        "\\begin{gather*}\n",
+        "d^2p = 2\\pi p\\ dp \\\\\n",
+        "\\epsilon = {p^2\\over 2m} \\to p\\ dp = m\\ d\\epsilon \\\\\n",
+        "{d^2 p\\over(2\\pi)^2} = {m \\over2\\pi}\\ d\\epsilon \\equiv {\\rho_{2D}(\\epsilon)\\over\\Omega}d\\epsilon \\ \\to\\  {\\rho_{2D}(\\epsilon)\\over m\\Omega} = {1\\over2\\pi} =\\text{constant}\n",
+        "\\end{gather*}\n",
+        "$$\n",
+        "\n",
+        "3차원에 대해 계산하면 다음과 같다. \n",
+        "\n",
+        "$$\n",
+        "\\begin{gather*}\n",
+        "{d^3p\\over(2\\pi)^3} = {1\\over (2\\pi)^3}4\\pi p^2\\ dp = {\\sqrt{2m\\epsilon}\\over2\\pi^2}m\\ d\\epsilon\\equiv{\\rho_{3D}(\\epsilon)\\over\\Omega}d\\epsilon \\\\\n",
+        "{\\rho_{3D}(\\epsilon)\\over m\\Omega} = {\\sqrt{2m\\epsilon}\\over2\\pi^2}\n",
+        "\\end{gather*}\n",
+        "$$\n",
+        "\n",
+        "적분을 통하여 $-1/V_0$의 값을 구하면 다음과 같다. [^Ketterle]\n",
+        "\n",
+        "2차원:  \n",
+        "$$\n",
+        "-{1\\over V_0}= \\text{const.} \\log {2E_R + |E|\\over|E|}\n",
+        "$$\n",
+        "3차원:  \n",
+        "$$\n",
+        "-{1\\over V_0}=\\text{const.}\\left( \\sqrt{2E_R} - {\\pi\\over2}\\sqrt{|E|}\\right)\n",
+        "$$\n",
+        "\n",
+        "$|V_0|=-V_0\\to 0$일 경우 왼쪽항은 $+\\infty$로 발산한다.  \n",
+        "1차원과 2차원에서는 $-V_0=|V_0|$가 작더라도 그것을 만족시키는 $|E|$의 해가 존재하지만, 3차원에서는 존재하지 않는다.  \n",
+        "따라서 3차원에서 weak potential은 bounded state를 형성할 수 없다.  \n",
+        "\n",
+        "[^Ketterle]: Ketterle et.al, Making, probing and understanding ultracold Fermi gases arXiv:0801.2500  \n",
+        "    https://ocw.mit.edu/courses/physics/8-422-atomic-and-optical-physics-ii-spring-2013/readings/ Lecture 20."
+      ],
+      "metadata": {
+        "id": "FSvCsT8VTpeL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## perturbation theory (quantum mechanics)\n",
         "\n",
         "Total Hamiltonian = Free particle Hamiltonian  + Interaction Hamiltonian\n",
@@ -1682,78 +1756,6 @@
       ],
       "metadata": {
         "id": "iy0x7J6xTi2n"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Bounded states of weak potential\n",
-        "\n",
-        "Scrodinger 방정식은 다음과 같다. (reduced mass  $\\mu={m\\over2}$)\n",
-        "\n",
-        "$$\n",
-        "\\left({1\\over m}{\\partial^2\\over\\partial x^2}+E\\right)\\psi(x) = V(x)\\psi(x)\n",
-        "$$\n",
-        "Fourier transform을 하면,\n",
-        "$$\n",
-        "\\begin{equation}\n",
-        "\\left({1\\over m}{\\partial^2\\over\\partial x^2}+E\\right)\\int{dp\\over2\\pi}e^{-ipx}\\psi(p) = \\int{dp\\over2\\pi}e^{-ipx}\\int dx'e^{ipx}V(x')\\psi(x')\\\\\n",
-        "\\left(-{p^2\\over m}+E\\right)\\psi(p) = \\int {dp'\\over2\\pi}V(p-p')\\psi(p')\\\\\n",
-        "\\psi(p) = -mV_0{1\\over p^2+k^2}\\int {dp'\\over2\\pi}\\psi(p')\\\\\n",
-        "-{k^2\\over m}\\equiv E\n",
-        "\\end{equation}\n",
-        "$$\n",
-        "양변을 p에 대해 적분하면 (self consistancy),\n",
-        "$$\n",
-        "-{1\\over V_0} = \\int {dp\\over2\\pi}{m\\over p^2+k^2}\\approx \\int_{p<{1\\over R}} {dp\\over2\\pi}{m\\over p^2+k^2}\n",
-        "$$\n",
-        "일반적으로 d차원에서는,\n",
-        "$$\n",
-        "\\begin{equation}\n",
-        "-{1\\over V_0} = \\int_{p<{1\\over R}} {dp^d\\over(2\\pi)^d}{m\\over p^2+k^2}\n",
-        "= \\int_{\\epsilon < E_R}d\\epsilon{\\rho_d(\\epsilon)/\\Omega\\over 2\\epsilon+|E|}\\\\\n",
-        "E_R\\equiv {\\hbar^2\\over mR^2}\n",
-        "\\end{equation}\n",
-        "$$\n",
-        "\n",
-        "여기서 weak potential $V_0\\sim VR^d$이고, $V_0$가 volume의 차원을 가지므로 $\\Omega$는 system의 volume이다. \n",
-        "\n",
-        "2차원에 대해 계산하면 다음과 같다.  \n",
-        "$$\n",
-        "\\begin{equation}\n",
-        "d^2p = 2\\pi p\\ dp \\\\\n",
-        "\\epsilon = {p^2\\over 2m} \\to p\\ dp = m\\ d\\epsilon \\\\\n",
-        "{d^2 p\\over(2\\pi)^2} = {m \\over2\\pi}\\ d\\epsilon \\equiv {\\rho_{2D}(\\epsilon)\\over\\Omega}d\\epsilon \\ \\to\\  {\\rho_{2D}(\\epsilon)\\over m\\Omega} = {1\\over2\\pi} =\\text{constant}\n",
-        "\\end{equation}\n",
-        "$$\n",
-        "\n",
-        "3차원에 대해 계산하면 다음과 같다. \n",
-        "\n",
-        "$$\n",
-        "{d^3p\\over(2\\pi)^3} = {1\\over (2\\pi)^3}4\\pi p^2\\ dp = {\\sqrt{2m\\epsilon}\\over2\\pi^2}m\\ d\\epsilon\\equiv{\\rho_{3D}(\\epsilon)\\over\\Omega}d\\epsilon \\\\\n",
-        "{\\rho_{3D}(\\epsilon)\\over m\\Omega} = {\\sqrt{2m\\epsilon}\\over2\\pi^2}\n",
-        "$$\n",
-        "\n",
-        "적분을 통하여 $-1/V_0$의 값을 구하면 다음과 같다. [^Ketterle]\n",
-        "\n",
-        "2차원:  \n",
-        "$$\n",
-        "-{1\\over V_0}= \\text{const.} \\log {2E_R + |E|\\over|E|}\n",
-        "$$\n",
-        "3차원:  \n",
-        "$$\n",
-        "-{1\\over V_0}=\\text{const.}\\left( \\sqrt{2E_R} - {\\pi\\over2}\\sqrt{|E|}\\right)\n",
-        "$$\n",
-        "\n",
-        "$|V_0|=-V_0\\to 0$일 경우 왼쪽항은 $+\\infty$로 발산한다.  \n",
-        "1차원과 2차원에서는 $-V_0=|V_0|$가 작더라도 그것을 만족시키는 $|E|$의 해가 존재하지만, 3차원에서는 존재하지 않는다.  \n",
-        "따라서 3차원에서 weak potential은 bounded state를 형성할 수 없다.  \n",
-        "\n",
-        "[^Ketterle]: Ketterle et.al, Making, probing and understanding ultracold Fermi gases arXiv:0801.2500  \n",
-        "    https://ocw.mit.edu/courses/physics/8-422-atomic-and-optical-physics-ii-spring-2013/readings/ Lecture 20."
-      ],
-      "metadata": {
-        "id": "FSvCsT8VTpeL"
       }
     },
     {
