Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -30,6 +30,48 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# BCS theory 개요\n",
+        "\n",
+        "**Attractive force**\n",
+        "\n",
+        "먼저 저온 금속에서 phonon을 매개로하는 electron-electron scattering이 attractive임을 보인다.\n",
+        "\n",
+        "1. Harmonic oscillator를 이용한 creation / annihlation\n",
+        "2. Phonon의 모델링과 양자화 \n",
+        "3. Electron-phonon interaction Hamiltonian의 구성\n",
+        "4. Perturbation theory를 이용한 electron-electron scattering의 계산\n",
+        "5. Attractive force에 대한 물리적 설명\n",
+        "\n",
+        "\n",
+        "**Cooper pair**\n",
+        "\n",
+        "Momentum과 spin이 반대인 전자가 ground state(0도)에서 pair를 형성하여 bounded state가 되는 것을 보인다.\n",
+        "\n",
+        "**BCS theory**\n",
+        "\n",
+        "1. Fermi surface 근처의 모든 전자들의 many particle wave function을 구성한다.\n",
+        "2. Mean Field Hamiltonian을 통하여 BCS wavefunction의 ground state energy를 구한다.\n",
+        "3. Bogoliubov transformation을 통하여 finite temperature에서 excited state의 energy를 구한다.\n",
+        "4. Ground state와 excited state와의 에너지 gap을 통하여 superconductivity를 설명한다.  \n",
+        "5. Energy gap과 critical temperature와의 상관관계를 구한다.\n",
+        "\n",
+        "**Impurities**\n",
+        "\n",
+        "1. 소량의 impurity가 superconductivity에 손상을 가하지 않는 이유에 대해서 설명한다. \n",
+        "\n",
+        "**Appendix**\n",
+        "\n",
+        "1. 3차원에서 일반적인 weak potential은 bounded state를 형성할 수 없음을 보인다.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DuPUjYXCfVfm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Attractive force"
       ],
       "metadata": {
