Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -497,7 +497,7 @@
         "\n",
         "$c_{k}, c_{k'}$는 $k,k'$의 momentum을 가진 전자 두 개의 incoming(or annhilation)을 의미한다.  \n",
         "$a^\\dagger_q, a_{q}$는 중계하는 phonon(momentum $q$)의 생성과 소멸을 의미한다.  \n",
-        "$c^\\dagger_{k+q}, c^\\dagger_{k'-q}$는 두 전자의 outcoming(or creation)이다.  \n",
+        "$c^\\dagger_{k+q}, c^\\dagger_{k'-q}$는 두 전자의 outgoing(or creation)을 의미한다.  \n",
         "\n",
         "Phonon을 매개로하는 두 electron의 interaction을 Feynman diagram으로 표시하면 다음과 같다.   \n",
         "($\\sigma,\\sigma'$는 두 전자의 spin을 의미하고 $s$는 phonon의 vibration mode를 의미한다.)    \n",
