Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -599,7 +599,7 @@
         "\\omega_D \\equiv \\omega_\\text{max} = v\\left(6\\pi^2{N\\over V}\\right)^{1\\over3}\n",
         "$$\n",
         "\n",
-        "따라서 crystal내의 wave의 분포는 다음의 그래프와 같은 분포를 가진다.\n",
+        "따라서 crystal내의 wave의 분포는 다음의 그래프와 갖다.\n",
         "\n",
         "\n",
         "<div>\n",
