Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -725,7 +725,7 @@
         "전체의 pair wavefunction은 다음과 같다.  \n",
         "$$\n",
         "\\Psi(\\mathbf r_1, \\mathbf r_2) = \n",
-        "\\sum_{\\bf k} \\varphi_\\mathbf k e^{i\\mathbf k(\\mathbf r_1-\\mathbf r_2)} {1\\over\\sqrt 2}(\\left|\\uparrow\\right\\rangle_1\\left|\\downarrow\\right\\rangle_2 - \\left|\\downarrow\\right\\rangle_1\\left|\\uparrow\\right\\rangle_2)\n",
+        "\\sum_{\\bf k} \\varphi_\\mathbf k e^{i\\mathbf k(\\mathbf r_1-\\mathbf r_2)} {1\\over\\sqrt 2}(\\left|\\uparrow\\right\\rangle_1\\left|\\downarrow\\right\\rangle_2 - \\left|\\downarrow\\right\\rangle_1\\left|\\uparrow\\right\\rangle_2)\\tag{34.1.4}\n",
         "$$\n",
         "\n",
         "복잡한 1,2 index 대신에 second quantization form으로 표기하면 다음과 같다.[^solyom3] \n",
@@ -1393,34 +1393,22 @@
         "\n",
         "특히 저온에서는 위의 입자모델과 달리 전자의 위치를 특정할 수 없게 된다. Free electron은 momentum eigen state로서 fermi sea를 채우고 있으며, 전자는 여러개의 이온에 걸쳐있게 된다. 기본적으로 free electron은 impurity나 disorder가 아닌 이상 결정의 격자 구조와 충돌하지 않고 이동할 수 있다. \n",
         "\n",
-        "## Mean free path of free electron  \n",
-        "\n",
-        "Fermi surface에 있는 전자들 만이 conductance에 기여한다.  \n",
-        "따라서 전자의 mean free path를 $l=v_{\\bf F}\\tau$로 정의할 수 있다.  \n",
-        "상온 금속에서의 mean free path를 추정할 수 있으며 약 100Å이다. [^ref1]  \n",
-        "저온의 순수한 metal에서는 수 cm의 길이를 가질 수 있다.  \n",
-        "(저온에서의 fermi momentum은 약 1$Å^{-1}$ 이다.) [^ref2]\n",
-        "\n",
-        "[^ref1]: Since only electrons at the Fermi surface contribute to the conductance, we can define the mean free path of electrons as  $l=v_{\\bf F}\\tau$. We can make an estimate of the mean free path for metal at room temperature. This estimate gives a value of 100Å. So it is of the order of a few tens interatomic distances. At low temperatures for very pure metals the mean free path can be made as high as a few  \n",
-        "cm.   \n",
-        "    [mean free path](https://en.wikipedia.org/wiki/Free_electron_model#Mean_free_path)  \n",
-        "\n",
-        "[^ref2]: [Fermi momentum](https://unlcms.unl.edu/cas/physics/tsymbal/teaching/SSP-927/Section%2007_Free_Electron_Model.pdf)   \n",
         "\n",
         "\n",
         "## Coherece lenth of Cooper pair\n",
         "\n",
-        "금속 내의 전류에 기여하는 두 electron의 correlation length $r_0$는 다음과 같다.  \n",
+        "\bCooper pair는 momentum 공간에서의 bound state이다. Fermi energy 근처의 engergy gap $\\Delta$내에서 $\\bf k$와 $-\\bf k$의 전자들이 wave packet을 형성한다. Momontum 공간에서 이 영역의 폭은 다음과 같다.  \n",
         "\n",
         "$$\n",
-        "{1\\over r_0} = {1\\over\\xi_0} + {1\\over l}\n",
+        "\\hbar\\Delta k\\approx {\\Delta\\over v_\\text F}\n",
         "$$\n",
         "\n",
-        "여기서 길이 $\\xi_0$를 **coherence length**라고 부른다. BCS theory가 완성되고 난 후에 이 coherence length는 energy gap과 관련되어 있음을 알게 되었다.  \n",
+        "따라서 wave packet의 길이는 다음과 같다. \n",
+        "$$\n",
+        "\\xi_0\\approx{\\hbar v_\\text{F}\\over\\Delta}\n",
+        "$$\n",
         "\n",
-        "$$\n",
-        "\\xi_0 = {\\hbar v_F \\over \\pi\\Delta}\n",
-        "$$\n",
+        "여기서 길이 $\\xi_0$를 **coherence length**라고 부른다. 비슷한 결과를 (34.1.4)의 wave function을 이용하여 $\\langle r^2\\rangle$을 계산하여도 얻을 수 있다. [^solyom]\n",
         "\n",
         "이 coherence length는 BCS theory의 cooper pair bound state의 물리적 크기를 나타낸다는 의미를 갖는다. [^Annett]  \n",
         "\n",
@@ -1435,12 +1423,37 @@
         "\n",
         "Fermi energy가 $\\epsilon_F\\sim1\\text{ eV}$ 이고 energy gap이 $\\Delta\\sim 1 \\text{meV}$인 저온의 conventional superconductor에서 cooper pair의 effective volume내에는 약 $\\sim10^6$ 개의 cooper pair가 중첩되어 있다. [^Kadin2]  \n",
         "\n",
-        "## impurity effect  \n",
+        "## Impurity와의 elastic scattering에 따른 critical current density\n",
         "\n",
-        "Impurity는 $T_c$를 낮추는데 주로 기여한다.\n",
+        "두 개의 전자가 Cooper pair를 이룰 때 finite한 static current가 흐를 경우의 center of mass momentum을 $\\bf q$라고 하면, 각각의 전자는 $\\mathbf k+\\mathbf q/2$와 $-\\mathbf k+\\mathbf q/2$의 momentum을 갖는다.  \n",
+        "그렇다면 전자의 속도는 $-\\hbar\\mathbf q/2m_e$이다. 따라서 current density는 다음과 같다.  \n",
         "\n",
-        "[Impurity Effects on the Superconducting Transition Temperature](https://unlcms.unl.edu/cas/physics/tsymbal/teaching/SSP-927/Section%2008_Electron_Transport.pdf)  \n",
-        "(fermi surface의 shift에 대한 good graph)\n",
+        "$$\n",
+        "j = -en_e{\\hbar q\\over 2m_e}\n",
+        "$$ \n",
+        "\n",
+        "Impurity에 의해 Cooper pair가 파괴 되려면 BCS enenergy gap $2\\Delta$보다 커야한다. $(\\mathbf k+\\mathbf q_2,\\mathbf k-\\mathbf q_2)$ pair 중 앞의 것이 충돌하여 momentum이 $-\\mathbf k+\\mathbf q_2$가 되었다고 하자.  충돌 전후 전자의 에너지 차이는 gap을 넘어서야 한다.  \n",
+        "\n",
+        "$$\n",
+        "{\\hbar^2(\\mathbf k+\\mathbf q/2)^2\\over 2m_e} - {\\hbar^2(-\\mathbf k+\\mathbf q/2)^2\\over 2m_e}\\ge 2\\Delta\n",
+        "$$\n",
+        "\n",
+        "이것으로 전자의 최소 drift 속도를 구할 수 있다.\n",
+        "\n",
+        "$$\n",
+        "q{\\hbar^2k_\\text F\\over m_e}\\ge 2\\Delta\n",
+        "$$\n",
+        "\n",
+        "이 조건을 만족시키는 critical current density는 다음과 같다. \n",
+        "\n",
+        "$$\n",
+        "j_c = -{en_e\\Delta\\over\\hbar k_\\text F}\n",
+        "$$\n",
+        "\n",
+        "Gap이 1meV라고 할 때 critical current density는 $10^7 \\text{A/cm}^2$ 이다. (Superconductor의 바깥쪽의 magnetic field의 침투거리를 고려하지 않은 것으로, 실험으로 측정된 것 보다는 수 order의 차이가 난다.)\n",
+        "\n",
+        "즉, superconductor의 전류밀도가 엄청나게 높지 않은한, impurity는 Cooper pair를 파괴할 수 없고 따라서 superconductivity가 유지된다. \n",
+        "\n",
         "\n",
         "## Dirty superconductor\n",
         "\n",
@@ -1798,6 +1811,33 @@
       ],
       "metadata": {
         "id": "iy0x7J6xTi2n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mean free path of free electron  \n",
+        "\n",
+        "Fermi surface에 있는 전자들 만이 conductance에 기여한다.  \n",
+        "따라서 전자의 mean free path를 $l=v_{\\bf F}\\tau$로 정의할 수 있다.  \n",
+        "상온 금속에서의 mean free path를 추정할 수 있으며 약 100Å이다. [^ref1]  \n",
+        "저온의 순수한 metal에서는 수 cm의 길이를 가질 수 있다.  \n",
+        "(저온에서의 fermi momentum은 약 1$Å^{-1}$ 이다.) [^ref2]\n",
+        "\n",
+        "[^ref1]: Since only electrons at the Fermi surface contribute to the conductance, we can define the mean free path of electrons as  $l=v_{\\bf F}\\tau$. We can make an estimate of the mean free path for metal at room temperature. This estimate gives a value of 100Å. So it is of the order of a few tens interatomic distances. At low temperatures for very pure metals the mean free path can be made as high as a few  \n",
+        "cm.   \n",
+        "    [mean free path](https://en.wikipedia.org/wiki/Free_electron_model#Mean_free_path)  \n",
+        "\n",
+        "[^ref2]: [Fermi momentum](https://unlcms.unl.edu/cas/physics/tsymbal/teaching/SSP-927/Section%2007_Free_Electron_Model.pdf)   \n",
+        "\n",
+        "## impurity effect  \n",
+        "\n",
+        "Impurity는 $T_c$를 낮추는데 주로 기여한다.\n",
+        "\n",
+        "[Impurity Effects on the Superconducting Transition Temperature](https://unlcms.unl.edu/cas/physics/tsymbal/teaching/SSP-927/Section%2008_Electron_Transport.pdf)  \n"
+      ],
+      "metadata": {
+        "id": "v__PouFJS4A_"
       }
     },
     {
