Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1432,7 +1432,7 @@
         "j = -en_e{\\hbar q\\over 2m_e}\n",
         "$$ \n",
         "\n",
-        "Impurity에 의해 Cooper pair가 파괴 되려면 BCS enenergy gap $2\\Delta$보다 커야한다. $(\\mathbf k+\\mathbf q_2,\\mathbf k-\\mathbf q_2)$ pair 중 앞의 것이 충돌하여 momentum이 $-\\mathbf k+\\mathbf q_2$가 되었다고 하자.  충돌 전후 전자의 에너지 차이는 gap을 넘어서야 한다.  \n",
+        "Impurity에 의해 Cooper pair가 파괴 되려면 BCS enenergy gap $2\\Delta$보다 커야한다. $(\\mathbf k+\\mathbf q/2,\\mathbf k-\\mathbf q/2)$ pair 중 앞의 것이 충돌하여 momentum이 $-\\mathbf k+\\mathbf q/2$가 되었다고 하자.  충돌 전후 전자의 에너지 차이는 gap을 넘어서야 한다.  \n",
         "\n",
         "$$\n",
         "{\\hbar^2(\\mathbf k+\\mathbf q/2)^2\\over 2m_e} - {\\hbar^2(-\\mathbf k+\\mathbf q/2)^2\\over 2m_e}\\ge 2\\Delta\n",
