Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1221,8 +1221,7 @@
         "\n",
         "Suppercurrent에 기여하는 것은 Fermi surface근처의 BCS ground state뿐이아니라 Fermi sea 내부의 전자(free electron)들도 기여한다. 모두가 동일한 속도로 이동한다. 전자는 excite state와의 energy gap 때문에 scattering되지 않고 후자는 이미 모든 상태가 차 있기 때문에 scattering되지 않는다. [^Kadin] [^Blundell]  \n",
         "\n",
-        "[^tsymbal]: The situation changes when a field is applied. If the field is in the positive x-direction, each electron\n",
-        "acquires a drift velocity, as given by Eq.(3). Thus the whole Fermi sphere is displaced to the left, as shown in Fig.3(b). Although the displacement is very small, and although the great majority of the electrons still cancel each other pairwise, some electrons - in the shaded crescent in the figure - remain uncompensated. It is these electrons which produce the observed current.  \n",
+        "[^tsymbal]: The situation changes when a field is applied. If the field is in the positive x-direction, each electron acquires a drift velocity, as given by Eq.(3). Thus the whole Fermi sphere is displaced to the left, as shown in Fig.3(b). Although the displacement is very small, and although the great majority of the electrons still cancel each other pairwise, some electrons - in the shaded crescent in the figure - remain uncompensated. It is these electrons which produce the observed current.  \n",
         "    The very small displacement is due to a relatively small drift velocity. If we assume that the electric field is 0.1V/cm, we obtain the drift velocity of 1cm/s, which is by 8 orders in magnitude smaller the Fermi velocity of electrons.\n",
         "    https://unlcms.unl.edu/cas/physics/tsymbal/teaching/SSP-927/index.shtml lecture 8 \n",
         "\n",
