Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -376,8 +376,10 @@
         "  \n",
         "이 변환된 $H'$에 대해 해를 구하면,\n",
         "$$\n",
+        "\\begin{gather*}\n",
         "H'|\\psi'\\rangle = E|\\psi'\\rangle\\\\\n",
         "He^{\\eta S}|\\psi'\\rangle=Ee^{\\eta S}|\\psi'\\rangle\n",
+        "\\end{gather*}\n",
         "$$\n",
         "원래의 Hamiltonian과 같은 energy spectrum 얻을 수 있다.  \n",
         "(ref: Sólyom)  \n",
